# Adaptive-AUTOSAR-IVI-Middleware

./: CHANGES.md  CMakeLists.txt  README.md
climate_service/: CMakeLists.txt  main.cpp
climate_service/src/: main.cpp
cmake/: modules.cmake
common/: CMakeLists.txt
common/include/: common.hpp  logging.hpp  persistence.hpp  someip.hpp  someip_shim.hpp
common/src/: common.cpp  logging.cpp  persistence.cpp  someip.cpp  someip_shim.cpp
config/: services.json
hmi/: CMakeLists.txt  main.cpp
hmi_client/: CMakeLists.txt
hmi_client/src/: main.cpp
media_service/: CMakeLists.txt  main.cpp
media_service/src/: main.cpp
navigation_service/: CMakeLists.txt  main.cpp
navigation_service/src/: main.cpp
service_manager/: CMakeLists.txt
service_manager/src/: main.cpp
tests/: CMakeLists.txt  serialization_tests.cpp
